--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">NewsReader</string>
     <string name="author">"Author: "</string>
+    <string name="something_went_wrong">\"Something went wrong... please try again later!\"</string>
 </resources>
