--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">NewsReader</string>
     <string name="author">"Author: "</string>
     <string name="something_went_wrong">Something went wrong. Displaying local data</string>
+    <string name="no_data_found">No data found</string>
 </resources>
