--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="author">"Author: "</string>
     <string name="something_went_wrong">Something went wrong. Displaying local data</string>
     <string name="no_data_found">No data found</string>
+    <string name="score">Score:</string>
+    <string name="created_at">"Created at: "</string>
 </resources>
